// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleInput should render caption 1`] = `
<div>
  <label
    aria-checked="true"
    class="label label"
    for="toggle-button-8"
    role="switch"
  >
    <input
      checked=""
      class="input"
      disabled=""
      id="toggle-button-8"
      name="toggle-button-8"
      type="checkbox"
    />
    <div
      class="slider"
    />
    Label
  </label>
  <div
    class="caption caption"
  >
    caption
  </div>
</div>
`;

exports[`ToggleInput should render label 1`] = `
<div>
  <label
    aria-checked="true"
    class="label label"
    for="toggle-button-7"
    role="switch"
  >
    <input
      checked=""
      class="input"
      disabled=""
      id="toggle-button-7"
      name="toggle-button-7"
      type="checkbox"
    />
    <div
      class="slider"
    />
    Label
  </label>
</div>
`;

exports[`ToggleInput should render the button disabled, and have onClick disabled 1`] = `
<div>
  <label
    aria-checked="true"
    class="label isDisabled label disabledLabel"
    for="toggle-button-5"
    role="switch"
  >
    <input
      checked=""
      class="input"
      disabled=""
      id="toggle-button-5"
      name="toggle-button-5"
      type="checkbox"
    />
    <div
      class="slider"
    />
  </label>
</div>
`;

exports[`ToggleInput should render the button loading and disabled 1`] = `
<div>
  <label
    aria-checked="true"
    class="label isDisabled label loadingLabel disabledLabel"
    for="toggle-button-6"
    role="switch"
  >
    <input
      checked=""
      class="input"
      disabled=""
      id="toggle-button-6"
      name="toggle-button-6"
      type="checkbox"
    />
    <div
      class="slider"
    />
    <svg
      class="spinner light spinner spinnerLeft"
      preserveAspectRatio="xMidYMid meet"
      role="status"
      viewBox="0 0 20 20"
      width="100%"
    >
      <circle
        class="dot"
        cx="10"
        cy="10"
        fill="none"
        r="6"
        stroke-width="2"
      />
      <circle
        class="circle"
        cx="10"
        cy="10"
        fill="none"
        r="6"
        stroke-width="2"
      />
      <span
        class="sr-only"
      >
        Loading...
      </span>
    </svg>
  </label>
</div>
`;

exports[`ToggleInput should render the button loading, and have onClick disabled 1`] = `
<div>
  <label
    aria-checked="true"
    class="label label loadingLabel"
    for="toggle-button-4"
    role="switch"
  >
    <input
      checked=""
      class="input"
      disabled=""
      id="toggle-button-4"
      name="toggle-button-4"
      type="checkbox"
    />
    <div
      class="slider"
    />
    <svg
      class="spinner light spinner spinnerLeft"
      preserveAspectRatio="xMidYMid meet"
      role="status"
      viewBox="0 0 20 20"
      width="100%"
    >
      <circle
        class="dot"
        cx="10"
        cy="10"
        fill="none"
        r="6"
        stroke-width="2"
      />
      <circle
        class="circle"
        cx="10"
        cy="10"
        fill="none"
        r="6"
        stroke-width="2"
      />
      <span
        class="sr-only"
      >
        Loading...
      </span>
    </svg>
  </label>
</div>
`;

exports[`ToggleInput should render the checkbox checked 1`] = `
<div>
  <label
    aria-checked="true"
    class="label label"
    for="toggle-button-1"
    role="switch"
  >
    <input
      checked=""
      class="input"
      disabled=""
      id="toggle-button-1"
      name="toggle-button-1"
      type="checkbox"
    />
    <div
      class="slider"
    />
  </label>
</div>
`;

exports[`ToggleInput should render the checkbox unchecked 1`] = `
<div>
  <label
    aria-checked="false"
    class="label label"
    for="toggle-button-3"
    role="switch"
  >
    <input
      class="input"
      disabled=""
      id="toggle-button-3"
      name="toggle-button-3"
      type="checkbox"
    />
    <div
      class="slider"
    />
  </label>
</div>
`;
